--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native-screens": "~4.1.0",
     "expo-router": "4.0.11",
     "expo-linking": "~7.0.3",
-    "expo-constants": "~17.0.3"
+    "expo-constants": "~17.0.3",
+    "expo-checkbox": "~4.0.0",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
