--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "expo": "~52.0.18",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
@@ -17,6 +20,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
